--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,9 +1,10 @@
 .kasa-footer {
-  background-color: #000000;
+  background: #000000;
   width:1440px;
   height: 200px;
   margin-top: 35px;
   position: relative;
+  top:3000px;
 }
 
 .footer-container {
@@ -13,12 +14,15 @@
   padding: 25px 0px;
 }
 
-.footer-container > img {
+.kasa-footer img {
   display: block;
   margin: auto;
+  padding-right: 150px;
+  padding-top: 66px;
 }
 
-.footer-container > p {
+.kasa-footer p {
   color: #ffffff;
   text-align: center;
+  padding-right: 150px;
 }
