--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -1,7 +1,7 @@
 .kasa-carousel {
     width: 1240px;
     height: 415px;
-    margin: auto auto 30px auto;
+    margin: 50px auto 30px auto;
     position: relative;
 }
 
