--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,6 @@
   background: #000000;
   width:1440px;
   height: 200px;
-  margin-top: 35px;
   position: relative;
   top:1000px;
 }
@@ -25,4 +24,5 @@
   color: #ffffff;
   text-align: center;
   padding-right: 150px;
+  padding-top: 20px;
 }
