--- a/src/styles/Tag.css
+++ b/src/styles/Tag.css
@@ -6,7 +6,7 @@
     color: #ffffff;
     display: inline-block;
     font-size: 14px;
-    margin: auto 10px;
+    margin: 20px 10px;
     padding: 5px 15px;   
     text-align: center; 
 }
