--- a/src/styles/Thumb.css
+++ b/src/styles/Thumb.css
@@ -30,10 +30,11 @@
 }
 
 .thumb-title {
+    width: 300px;
     bottom: 20px;
     color: #ffffff;
     font-size: 18px;
     left: 20px;
-    margin-right: 20px;
     position: absolute;
+    top:290px;
 }
