--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -17,9 +17,10 @@
     color: #ff6060;
     display: block;
     font-size: 36px;
-    margin-top: 66px;
-    margin-left: 200px;
+    margin: auto;
+    padding-top: 66px;
 }
+
 
 .error-link {
     display: block;
