Adding CSS responsive for Carousel and DropDown component

--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -38,7 +38,7 @@
 }
 
 .dropdown-description {
-    height: 249px;
+    height: auto;
     color: #ff6060;
     margin-top: -10px;
     padding: 25px 10px 10px 10px;
