--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,7 +1,7 @@
 .kasa-carousel {
-    width: 1240px;
+    width: 100%;
     height: 415px;
-    margin: 50px auto 30px auto;
+    margin: 20px;
     position: relative;
 }
 
@@ -36,4 +36,11 @@
 
 .carousel-image.displayed {
     display: block;
+}
+
+@media screen  and (max-width: 718px) {
+    .arrow {
+        width: 12px;
+        height: 19px;
+    }
 }
