--- a/src/components/Tag/Tag.css
+++ b/src/components/Tag/Tag.css
@@ -1,12 +1,12 @@
 .kasa-tag {
-    min-width: 115px;
+    width: auto;
     height: 25px;
     background-color: #FF6060;
     border-radius: 10px;
     color: #ffffff;
     display: inline-block;
     font-size: 14px;
-    margin: 20px 10px;
+    margin: 20px 20px;
     padding: 5px 15px;   
     text-align: center; 
 }
