--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -1,6 +1,6 @@
 .kasa-dropdown {
     width: 100%;
-    height: 52px;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 35px;
     text-align: left;
@@ -11,12 +11,13 @@
 }
 
 .dropdown-header {
+    display: inline-flex;
     width: 100%;
-    height: 52px;
+    height: 25%;
+    min-height: 50px;
     align-items: center;
     background-color: #ff6060;
     border-radius: 10px;
-    display: inline-flex;
 }
 
 .dropdown-title {
@@ -33,16 +34,28 @@
   width: 100%;
 }
 
+.dropdown-arrow.true {
+  justify-content: start;
+  transform: rotate(-180deg);
+}
+
 .dropdown-arrow img {
-    width:15.56px;
+  width:25px;
 }
 
 .dropdown-description {
     height: auto;
-    color: #ff6060;
+    min-height: 146px;
     margin-top: -10px;
     padding: 25px 10px 10px 10px;
     background-color: #f6f6f6;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: #ff6060;
+}
+
+@media screen  and (max-width: 375px) {
+    .dropdown-arrow img {
+        width:15px;
+    }
 }
