--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: auto;
     border-radius: 10px;
-    margin-bottom: 35px;
+    margin: 20px;
     text-align: left;
 }
 
