--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,8 +21,13 @@
 }
 
 .kasa-navbar a {
+    text-decoration: none;
     padding-left: 57px;
     color: #FF6060;
+}
+
+.kasa-navbar a:hover {
+    text-decoration: underline;
 }
 
 .home-link {
