--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -4,5 +4,15 @@
     flex-wrap: wrap;
     width:auto;
     position: relative;
-    margin: 100px;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+
+@media screen  and (max-width: 718px) {
+    .about-dropdown {
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 50px;
+    }
 }
