--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,19 +20,13 @@
     padding-top: 50px;
 }
 
-.home-link, .about-link {
+.kasa-link {
+    text-decoration: none;
     padding-left: 57px;
     color: #FF6060;
 }
 
-.home-link {
-    padding-left: 85px;
-    padding-right: 20px;
-    margin-left: 23px;
-}
-
-
-@media screen  and (max-width: 506px) {
+@media screen and (max-width: 506px) {
     .kasa-logo {
         width: 147px;
     }
