Fixing scroll effect issue on DropDown component

--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -25,6 +25,7 @@
     display: block;
     color: #ff6060;
     margin-top: 150px;
+    margin-bottom: 50px;
 }
 
 @media screen and (max-width: 718px) {
