--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -27,9 +27,14 @@
     color: #ffffff;
     font-size: 48px;
     position: absolute;
-    left: 20%;
+    left: 25%;
     top: 37.5%;
-    margin-left: 25px;
+}
+
+@media screen and (max-width: 1050px) {
+    .banner-txt {
+      left:20%;
+    }
 }
 
 @media screen and (max-width: 718px) {
@@ -41,6 +46,6 @@
 
     .banner-txt {
         font-size: 24px;
-        margin-left: 0;
+        left: 25%;
     }
 }
