--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 * {
-  margin: 0;
+  margin:0;
   font-family: 'Montserrat', sans-serif;
+}
+
+@media screen and (max-width: 600px) {
+  #root {
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
